--- a/src/styles/GetStarted.css
+++ b/src/styles/GetStarted.css
@@ -42,10 +42,21 @@
     border-bottom-right-radius: 100px;
     border: 0;
     padding: 5px 20px;
+    transition: 0.1s;
+    cursor: pointer;
+
 
     height: 7vh;
     font-size: 2vh;
     width: 25vh;
+}
+
+#btnGetStarted:hover {
+    background-color: #47e486;
+}
+
+#btnGetStarted:active{
+    transform: scale(0.98);
 }
 
 @media (min-width: 1440px) {
